task/node-scheduling/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-mongo
  namespace: photo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo-mongo-label
  template:
    metadata:
      labels:
        app: photo-mongo-label
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - photo-label
            topologyKey: kubernetes.io/hostname
      containers:
        - name: photo-mongo-cont
          image: mongo:7.0
          ports:
            - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: photo-mongo-service
  namespace: photo-ns
spec:
  selector:
    app: photo-mongo-label
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
