task/node-scheduling/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-app-deploy
  namespace: photo-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: photo-label
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: photo-label
    tolerations:
      - key: "key1"
        operator: "Equal"
        value: "value1"
        effect: "NoSchedule"
    # spec:
    #   affinity:
    #     nodeAffinity:
    #       requiredDuringSchedulingIgnoredDuringExecution:
    #         nodeSelectorTerms:
    #           - matchExpressions:
    #               - key: node
    #                 operator: In
    #                 values: 
    #                   - worker
    #       preferredDuringSchedulingIgnoredDuringExecution:
    #       - weight: 5
    #         preference:
    #           matchExpressions:
    #           - key: kubernetes.io/os
    #             operator: In
    #             values: 
    #               - linux
    #       - weight: 10
    #         preference:
    #           matchExpressions:
    #           - key: node2
    #             operator: In
    #             values: 
    #               - top

      containers:
        - name: photo-cont
          image: suryaa112003/photo-studio:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: photo-service
  namespace: photo-ns
spec:
  selector:
    app: photo-label
  ports:
    - port: 3002
      targetPort: 3000
  type: NodePort
